plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.daon'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation platform("software.amazon.awssdk:bom:2.25.4")
    implementation "software.amazon.awssdk:s3"

    //회원가입 관련
    implementation 'com.auth0:java-jwt:4.4.0'
    implementation 'org.springframework.security:spring-security-crypto:6.1.2'

    //oauth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'




    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    implementation 'net.sourceforge.tess4j:tess4j:5.4.0' // 또는 최신 버전

    implementation 'org.apache.httpcomponents.client5:httpclient5'

}

dependencyManagement {
    imports {
        mavenBom("org.springframework.boot:spring-boot-dependencies:3.5.4")
    }
}


tasks.named('test') {
    useJUnitPlatform()
}
